--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -46,4 +46,4 @@ jobs:
       with:
         PROJECT_FILE_PATH: SnakeAI-Hamiltonian/SnakeAI-Hamiltonian.csproj
         NUGET_KEY: ${{secrets.GHUB_API_KEY}}
-        NUGET_SOURCE: https://nuget.pkg.github.com/TheSwerik/index.json
+        NUGET_SOURCE: https://nuget.pkg.github.com/TheSwerik
