--- a/Snake/Packages/manifest.json
+++ b/Snake/Packages/manifest.json
@@ -1,10 +1,13 @@
 {
   "dependencies": {
     "com.unity.2d.animation": "5.0.2",
+    "com.unity.2d.spriteshape": "5.0.2",
+    "com.unity.cinemachine": "2.6.3",
     "com.unity.collab-proxy": "1.3.9",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.3",
     "com.unity.ide.vscode": "1.2.2",
+    "com.unity.inputsystem": "1.0.0",
     "com.unity.render-pipelines.universal": "10.0.0-preview.26",
     "com.unity.test-framework": "1.1.18",
     "com.unity.textmeshpro": "3.0.1",
