--- a/Snake/Packages/manifest.json
+++ b/Snake/Packages/manifest.json
@@ -8,10 +8,11 @@
     "com.unity.ide.visualstudio": "2.0.3",
     "com.unity.ide.vscode": "1.2.2",
     "com.unity.inputsystem": "1.0.0",
+    "com.unity.postprocessing": "2.3.0",
     "com.unity.render-pipelines.universal": "10.0.0-preview.26",
     "com.unity.test-framework": "1.1.18",
-    "com.unity.textmeshpro": "3.0.1",
-    "com.unity.timeline": "1.4.3",
+    "com.unity.textmeshpro": "3.0.3",
+    "com.unity.timeline": "1.4.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
