--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -34,8 +34,12 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.402
+        nuget-api-key: ${{ secrets.NuGetAPIKey }}
+        nuget-version: '5.x'
     - name: Install dependencies
       run: dotnet restore
+    - name: Pack File
+      run: dotnet pack SnakeAI-Hamiltonian/.nuspec
     - name: Publish to NuGet
       uses: brandedoutcast/publish-nuget@v2.5.5
       with:
