--- a/SnakeAI-Hamiltonian/.nuspec
+++ b/SnakeAI-Hamiltonian/.nuspec
@@ -1,15 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
+        <title>SnakeAI</title>
+        <description>Server Quickstart Package, Client Half</description>
         <id>SnakeAI</id>
-        <version>1.0</version>
+        <version>1.0.0</version>
         <authors>Swerik</authors>
         <projectUrl>https://github.com/TheSwerik/SnakeAI</projectUrl>
         <repository>https://github.com/TheSwerik/SnakeAI</repository>
-        <!--        <icon>icon.png</icon>-->
         <tags>Snake AI</tags>
     </metadata>
-    <!--    <files>-->
-    <!--        <file src="icon.png" target=".\"/>-->
-    <!--    </files>-->
 </package>
