--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -46,6 +46,6 @@ jobs:
         PROJECT_FILE_PATH: SnakeAI-Hamiltonian/SnakeAI-Hamiltonian.csproj
         NUGET_KEY: ${{secrets.NUGET_API_KEY}}
     - name: Publish to Github
-      run: dotnet nuget push SnakeAI-Hamiltonian/bin/Release/*.nupkg -s https://nuget.pkg.github.com/TheSwerik/index.json -k ${GITHUB_TOKEN} --skip-duplicate -n true 
+      run: dotnet nuget push SnakeAI-Hamiltonian/**/*.nupkg -s https://nuget.pkg.github.com/TheSwerik/index.json -k ${GITHUB_TOKEN} --skip-duplicate -n true 
       env:
         GITHUB_TOKEN: ${{ secrets.GHUB_API_KEY }}
