--- a/SnakeAI-Hamiltonian/.nuspec
+++ b/SnakeAI-Hamiltonian/.nuspec
@@ -7,7 +7,7 @@
         <version>1.0.0</version>
         <authors>Swerik</authors>
         <projectUrl>https://github.com/TheSwerik/SnakeAI</projectUrl>
-        <repository>https://github.com/TheSwerik/SnakeAI</repository>
+        <repository type="git" url="https://github.com/TheSwerik/SnakeAI.git"/>
         <tags>Snake AI</tags>
     </metadata>
 </package>
