--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -47,6 +47,6 @@ jobs:
         NUGET_KEY: ${{secrets.NUGET_API_KEY}}
     - name: Publish to Github
       shell: pwsh
-      run: dotnet nuget push SnakeAI-Hamiltonian/**/*.nupkg -s https://nuget.pkg.github.com/TheSwerik/index.json -k "$env:GHUB_API_KEY" --skip-duplicate -n true 
+      run: dotnet nuget push SnakeAI-Hamiltonian/**/*.nupkg -s https://nuget.pkg.github.com/TheSwerik/index.json -k "$env:GITHUB_TOKEN" --skip-duplicate -n true 
       env:
         GITHUB_TOKEN: ${{ secrets.GHUB_API_KEY }}
